# overflow-detection

./: README.md  index.html  pyproject.toml
scripts/: README.md
scripts/data_preprocessing/: README.md  build_samples.py  data_utils.py  llm_utils.py  metrics.py  overflow_pipeline_xrag.py  probe_pipeline.py  projection_metrics.py  requirements.txt  run_pipeline.py
scripts/features_comparison/: README.md  getting_additional_context_features.ipynb  visualize_features_classification.ipynb
scripts/hiddens_comparison/: README.md  adding_context_features.ipynb  getting_context_features.ipynb  visualize_xrag_vs_others.ipynb
scripts/probing_experiments/: README.md  __init__.py  data_loader.py  models.py  run_probing_experiments.py  utils.py  visualize_classifiers_performance.py
scripts/xRAG/src/model/: __init__.py
scripts/xRAG/src/model/xGemma/: __init__.py  modeling_xgemma.py
