[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overflow"
version = "0.1.0"
description = "Detecting overflow in compressed token representations for retrieval-augmented generation (xRAG)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TODO" }
authors = [
  { name = "Julia Belikova" },
  { name = "Danila Rozhevskii" },
  { name = "Dennis Svirin" },
  { name = "Konstantin Polev" },
  { name = "Alexander Panchenko" },
]

# Dependencies for this repo's pipelines under `scripts/` (excluding `scripts/xRAG/`).
dependencies = [
  "torch==2.9.0",
  "torchvision==0.24",
  "transformers>=4.34.0",
  "datasets>=2.0.0",

  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "scikit-learn>=1.3.0",
  "pandas>=2.0.0",

  "tqdm>=4.65.0",
  "rich>=13.0.0",
  "matplotlib>=3.7.0",

  "regex>=2023.0.0",
]

[project.urls]
Paper = "https://arxiv.org/abs/2602.12235"

